src/test/contracts/negative/pattern_match5.jsligo
let test_foo = (x : test_exec_result) : string => {
  match(x) {
    when(Success(x, y)): "";
    when(Fail(_)): ""
  };
}
